--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^5.14.12",
-    "@mui/x-date-pickers": "^6.17.0",
+    "@mui/x-date-pickers": "^6.18.3",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.11.5",
     "axios": "^1.6.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
